[project]
name = "MLOps_course_AGH_lab_5"
version = "1.0.0"
description = ""
readme = "README.md"

requires-python = "==3.10"

dependencies = [
    "datasets",
    "evidently>=0.4.36",
    "jupyter",
    "kaleido==0.2.1",
    "lxml==4.9.3", # higher versions have wrong wheels
    "nannyml",
    "numpy<2", # Evidently requirement
    "pandas",
    "ruff",
    "scikit-learn",
    "sentence-transformers",
    "transformers[torch]",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu121" }
]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true
